--- a/gccsite/gcc/static/gcc/css/editions.css
+++ b/gccsite/gcc/static/gcc/css/editions.css
@@ -1,39 +1,46 @@
-.edition {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.edition .poster {
-    min-width: 100px;
-    max-width: 250px;
-    margin: 1em;
-}
-
-.edition > * {
-    flex: 1;
-}
-
-.edition p {
-    margin: 1em;
-}
-
-.edition .poster img {
+#edition-history img {
     max-width: 100%;
 }
 
-.edition .description p {
-    font-size: 1.1em;
-    text-align: left;
+#edition-history .edition-header:after {
+    content: "";
+    width: 5px;
+    height: 100%;
+    position: absolute;
+    right: -5px;
+    background-color: #1d655e;
 }
 
-.edition .carousel img {
-    display: none;
-    max-height: 250px;
-    margin: 30px auto;
+#edition-history h1 {
+    padding-top: 30px;
+    text-align: right;
 }
 
-.edition .carousel img:nth-child(1) {
-    display: block;
+#edition-history h1::after {
+    content: "";
+    position: absolute;
+    right: -12px;
+    width: 20px;
+    height: 20px;
+    background: #1d655e;
+    border-radius: 20px;
+    top: 41px;
+}
+
+.edition-description {
+    font-size: 1.2em;
+    padding-top: 30px;
+    padding-left: 20px;
+    /* min-height: 500px; */
+}
+
+.edition-description::before {
+    content: "";
+    width: 5px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #1d655e;
 }
 
