--- a/gccsite/gcc/templates/gcc/editions.html
+++ b/gccsite/gcc/templates/gcc/editions.html
@@ -19,7 +19,7 @@
         Subscribtions are still open for this edition.
         {% endblocktrans %}
       </p>
-      <a class="btn btn-primary btn-lg" href="">
+      <a class="btn btn-primary btn-lg" href="/application/form/2019">
         {% trans 'Candidate for a summer camp' %}
       </a>
     </div>
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-2 edition-header">
       <h1>2015</h1>
     </div>
     <div class="col-sm-10 edition-description">
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-2 edition-header">
       <h1>2014</h1>
     </div>
     <div class="col-sm-10 edition-description">
