--- a/gccsite/gcc/static/gcc/css/editions.css
+++ b/gccsite/gcc/static/gcc/css/editions.css
@@ -11,6 +11,7 @@
     width: 5px;
     height: 100%;
     position: absolute;
+    top: 0;
     right: -5px;
     background-color: #1d655e;
 }
@@ -49,3 +50,18 @@
     background-color: #1d655e;
 }
 
+@media(max-width: 768px) {
+
+    #edition-history h1::after {
+        left: -7px;
+    }
+
+    #edition-history h1 {
+        text-align: left;
+    }
+
+    #edition-history .edition-header:after {
+        left: 0;
+    }
+
+}
