--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -53,7 +53,7 @@
         {% if user.is_authenticated %}
             <a href="application/form/{{last_edition}}" class="btn btn-primary btn-lg btn-block">{% trans 'Register' %}</a>
         {% else %}
-            <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-block">{% trans 'Sign in' %}</a>
+            <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg btn-block">{% trans 'Sign in' %}</a>
         {% endif %}
         </p>
         </section>
