editions: integrate images in a collapse

--- a/gccsite/gcc/templates/gcc/editions.html
+++ b/gccsite/gcc/templates/gcc/editions.html
@@ -36,6 +36,17 @@
         Those summer camps had a total of <strong>70 girls</strong> and a new practice on <strong>microcontrolers microbit</strong> is created. With the video games tutorial and some activities with the Lego robots it's a great way to practice the skills learned during the week with creativity and fun !
         {% endblocktrans %}
       </p>
+      <button class="btn btn-lg btn-default btn-block" type="button" data-toggle="collapse" data-target="#photos2018" aria-expanded="false" aria-controls="photos2018">
+        4 photos
+      </button>
+      <div class="collapse" id="photos2018">
+        <div class="photos-view">
+          <img src="{% static 'archives/gcc/2018/photos/01.jpg' %}" />
+          <img src="{% static 'archives/gcc/2018/photos/02.jpg' %}" />
+          <img src="{% static 'archives/gcc/2018/photos/03.jpg' %}" />
+          <img src="{% static 'archives/gcc/2018/photos/04.jpg' %}" />
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -49,6 +60,16 @@
         In 2017, Prologin challenges itself to organize 3 Girls Can Code summer camps! One at <strong>Bordeaux</strong> in July and two others at<strong>Paris</strong> and <strong>Lyon</strong> at the same time at the end of august. They received a total of <strong>52 participants</strong> !
         {% endblocktrans %}
       </p>
+      <button class="btn btn-lg btn-default btn-block" type="button" data-toggle="collapse" data-target="#photos2017" aria-expanded="false" aria-controls="photos2017">
+        3 photos
+      </button>
+      <div class="collapse" id="photos2017">
+        <div class="photos-view">
+          <img src="{% static 'archives/gcc/2017/photos/01.jpg' %}" />
+          <img src="{% static 'archives/gcc/2017/photos/02.jpg' %}" />
+          <img src="{% static 'archives/gcc/2017/photos/03.jpg' %}" />
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -62,6 +83,14 @@
         This year a new tutorial was created on <strong>Networks</strong>, where each girls creates it's own chat client !
         {% endblocktrans %}
       </p>
+      <button class="btn btn-lg btn-default btn-block" type="button" data-toggle="collapse" data-target="#photos2016" aria-expanded="false" aria-controls="photos2016">
+        1 photo
+      </button>
+      <div class="collapse" id="photos2016">
+        <div class="photos-view">
+          <img src="{% static 'archives/gcc/2016/photos/01.jpg' %}" />
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -74,6 +103,14 @@
         In 2015, there was <strong>12 girls</strong> taking part to the summer camps which for the first time as tutorials on <strong>web programming</strong>, and a small tutorial on <strong>video game creation</strong> with the Pygame library and even an introduction to  <strong>Linux</strong>.
         {% endblocktrans %}
       </p>
+      <button class="btn btn-lg btn-default btn-block" type="button" data-toggle="collapse" data-target="#photos2015" aria-expanded="false" aria-controls="photos2015">
+        1 photo
+      </button>
+      <div class="collapse" id="photos2015">
+        <div class="photos-view">
+          <img src="{% static 'archives/gcc/2015/photos/01.jpg' %}" />
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -88,6 +125,14 @@
         Among all the participants, two in particular continue to study IT and became organizers as well.
         {% endblocktrans %}
       </p>
+      <button class="btn btn-lg btn-default btn-block" type="button" data-toggle="collapse" data-target="#photos2014" aria-expanded="false" aria-controls="photos2014">
+        1 photo
+      </button>
+      <div class="collapse" id="photos2014">
+        <div class="photos-view">
+          <img src="{% static 'archives/gcc/2014/photos/01.jpg' %}" />
+        </div>
+      </div>
     </div>
   </div>
 </div>
