--- a/gccsite/gcc/static/gcc/css/editions.css
+++ b/gccsite/gcc/static/gcc/css/editions.css
@@ -65,3 +65,19 @@
     }
 
 }
+
+/*
+ * Photos
+ */
+
+.photos-view {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 5px -5px;
+
+}
+
+.photos-view img {
+    margin: 5px;
+    max-height: 200px;
+}
