--- a/gccsite/gcc/templates/gcc/resources.html
+++ b/gccsite/gcc/templates/gcc/resources.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load i18n %}
 
+{% block title %}{% trans 'Resources' %}{% endblock %}
+
 {% block content %}
 
 <section class="ressources">
