--- a/gccsite/gcc/templates/gcc/base.html
+++ b/gccsite/gcc/templates/gcc/base.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>{% block super_title %}{% block title %}{% endblock %} – Girls Can Code!{% endblock %}</title>
+  <link rel="icon" type="image/png" href="{% static 'gcc/img/favicon.png' %}">
 
   {# Google font, Boostrap, FontAwesome #}
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,700italic,300,300italic"/>
   <link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}"/>
   <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}"/>
-
 
   {# Custom #}
   <link rel="stylesheet" type="text/css" href="{% static 'gcc/css/gcc.css' %}"/>
