--- a/gccsite/gcc/static/gcc/css/homepage.css
+++ b/gccsite/gcc/static/gcc/css/homepage.css
@@ -216,3 +216,35 @@
     font-size: 1.3em;
 }
 
+.highlight-row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+  flex-wrap: wrap;
+}
+.highlight-row > [class*='col-'] {
+  display: flex;
+  flex-direction: column;
+}
+
+.highlight {
+    flex: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0;
+}
+
+.highlight h4 {
+    margin-bottom: 0.5em;
+}
+
+.highlight p {
+    margin: auto 0;
+    font-size: 1em;
+}
+
+.highlight .btn {
+    margin-top: 1.5em;
+}
