--- a/gccsite/gcc/templates/gcc/resources.html
+++ b/gccsite/gcc/templates/gcc/resources.html
@@ -8,38 +8,32 @@
 
 <section class="ressources">
 <div class="row">
-<div class="col-sm-6">
-    <div class="title">{% trans "Learning to program" %}</div>
-    <div class="container">
-      <p>
-        {% blocktrans %}
-        Many resources are available on the internet to start coding, but it is sometime hard not to get lost in this ocean of informations.
-        We detail here some interesting resources to start learning.
-        {% endblocktrans %}
-      </p>
-    </div>
+  <h1>{% trans "Learning to program" %}</h1>
+  <p>
+    {% blocktrans %}
+    Many resources are available on the internet to start coding, but it is sometime hard not to get lost in this ocean of informations.
+    We detail here some interesting resources to start learning.
+    {% endblocktrans %}
+  </p>
 
-  <div class="title">{% trans "Which language to begin with ?" %}</div>
-    <div class="container">
-      <p>
-        {% blocktrans %}
-        When coding, we describe information that the machine will execute. To be able interact with the machine, we need to choose the language we will write in.
-        There are many existing languages, each with their specificities.
-        {% endblocktrans %}
-      </p>
-      <p>
-        {% blocktrans %}
-        It's important to know in which language we want to start programming in when starting because we learn to program in a language.
-        During the summer camps we mainly teach Python, which we recommend to start.
-        It's an easy language to start with (compared to other...) and it has many uses. YouTube for example is coded in Python.
-        {% endblocktrans %}
-      </p>
-    </div>
+  <h1>{% trans "Which language to begin with ?" %}</h1>
+  <p>
+    {% blocktrans %}
+    When coding, we describe information that the machine will execute. To be able interact with the machine, we need to choose the language we will write in.
+    There are many existing languages, each with their specificities.
+    {% endblocktrans %}
+  </p>
+  <p>
+    {% blocktrans %}
+    It's important to know in which language we want to start programming in when starting because we learn to program in a language.
+    During the summer camps we mainly teach Python, which we recommend to start.
+    It's an easy language to start with (compared to other...) and it has many uses. YouTube for example is coded in Python.
+    {% endblocktrans %}
+  </p>
 
-    <div class="title">{% trans "Starting" %}</div>
+    <h1>{% trans "Starting" %}</h1>
 
-    <div class="container">
-    <div class="row">
+    <div class="row highlight-horizontal">
         <div class="col-xs-3">
           {% with url="http://www.france-ioi.org/" %}
           <a target="_blank" href="{{url}}" class="image featured">
@@ -56,7 +50,7 @@
           </p>
         </div>
     </div>
-    <div class="row">
+    <div class="row highlight-horizontal">
         <div class="col-xs-3">
           {% with url="https://www.codecademy.com/fr" %}
           <a target="_blank" href="{{url}}" class="image featured">
@@ -73,42 +67,39 @@
           </p>
         </div>
     </div>
-  </div>
 
-  <div class="title">{% trans "Keep coding"%}</div>
-  <div class="container">
-    <p>
-        {% blocktrans %}
-        The good thing when learning to program, is that it can be used in many ways, to do plenty of things
-        There are a lot of sub domain or application in computer science, and to keep coding, it's more fun to find something we really like
-        Here are some examples:
-        {% endblocktrans %}
-    </p>
+  <h1>{% trans "Keep coding"%}</h1>
+        <p>
+            {% blocktrans %}
+            The good thing when learning to program, is that it can be used in many ways, to do plenty of things
+            There are a lot of sub domain or application in computer science, and to keep coding, it's more fun to find something we really like
+            Here are some examples:
+            {% endblocktrans %}
+        </p>
 
-    <div class="feature-list">
-
-    <div class="row">
-        <div class="col-xs-3">
-            <div class="img-container">
-                {% with url="https://djangogirls.org/" %}
-              <a href="{{url}}">
-                <img src="https://djangogirls.org/static/img/global/logo.png" />
-              </a>
+      {% with url="https://djangogirls.org/" %}
+        <div class="row highlight-horizontal">
+            <div class="col-xs-3">
+                <div class="img-container">
+                  <a href="{{url}}">
+                    <img src="https://djangogirls.org/static/img/global/logo.png" />
+                  </a>
+                </div>
+            </div>
+            <div class="col-xs-9">
+              <h3><a href="{{url}}">Django girls</a></h3>
+              <p>
+                  {% blocktrans %}
+                  They have written a tutorial to create a blog in Python thanks to the Django framework.
+                  It has been entirely translated in french and is very accessible.
+                  Django is a very powerful tool for web platforms. Both the GCC! and Prologin websites use Django.
+                  {% endblocktrans %}
+              </p>
             </div>
         </div>
-        <div class="col-xs-9">
-          <h3><a href="{{url}}">Django girls</a></h3>
-          {% endwith %}
-          <p>
-              {% blocktrans %}
-              They have written a tutorial to create a blog in Python thanks to the Django framework.
-              It has been entirely translated in french and is very accessible.
-              Django is a very powerful tool for web platforms. Both the GCC! and Prologin websites use Django.
-              {% endblocktrans %}
-          </p>
-        </div>
-    </div>
-      <div class="row">
+        {% endwith %}
+
+        <div class="row highlight-horizontal">
           <div class="col-xs-3">
               <a href="//prologin.org/">
                   <img src="https://prologin.org/static/img/logo_cube.png" />
@@ -124,10 +115,7 @@
                   {% endblocktrans %}
               </p>
           </div>
-      </div>
-  </div>
-  </div>
-</div>
-</div>
+        </div>
+    </div>
 </section>
 {% endblock %}
