--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load i18n %}
 
-{% block title %}Homepage{% endblock %}
+{% block title %}{% trans 'Home' %}{% endblock %}
 
 {% block extra_head %}
 <link rel="stylesheet" type="text/css" href="{% static 'gcc/css/homepage.css' %}" />
@@ -127,7 +127,7 @@
           <div class="form-group">
             <div class="col-sm-offset-3 col-sm-9">
               <button class="btn btn-primary" type="submit">
-                <i class="fa fa-key"></i> {% trans "Subscribe" %}
+                <i class="fa fa-newspaper-o"></i> {% trans "Subscribe" %}
               </button>
             </div>
           </div>
