--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -134,8 +134,9 @@
         </form>
 
         <h2>{% trans 'History behind Girls Can Code!' %}</h2>
-         <div class="row highlight-row">
-            <div class="col-sm-12 col-md-4 highlight">
+         <div class="row uniform-row">
+             <div class="col-sm-4">
+               <div class="highlight">
                 {% with url="https://www.lemonde.fr/campus/article/2017/12/11/femmes-et-informatique-vingt-ans-de-desamour_5227726_4401467.html" %}
                 <div class="thumbnail"> <img src="{% static 'gcc/img/stat_femmes.svg' %}" alt="" /> </div>
                 <h4><a href="{{url}}">{% trans 'Parity in IT' %}</a></h4>
@@ -146,8 +147,10 @@
                 </p>
                 <a href="{{url}}" class="btn btn-primary btn-block">{% trans 'Learn more' %}</a>
                 {% endwith %}
+              </div>
             </div>
-            <div class="col-sm-12 col-md-4 highlight">
+            <div class="col-sm-4">
+              <div class="highlight">
                 <div class="thumbnail"> <img src="{% static 'gcc/img/stat_editions.svg' %}" alt="" /> </div>
                 <h4><a href="{% url 'gcc:editions' %}">{% trans 'Girls Can Code past editions!' %}</a></h4>
                 <p>
@@ -156,8 +159,10 @@
                     {% endblocktrans %}
                 </p>
                 <a href="{% url 'gcc:editions' %}" class="btn btn-primary btn-block">{% trans 'Learn more' %}</a>
+              </div>
             </div>
-            <div class="col-sm-12 col-md-4 highlight">
+            <div class="col-sm-4">
+              <div class="highlight">
                 <div class="thumbnail"> <img src="{% static 'gcc/img/stat_prologin.svg' %}" alt="" /> </div>
                 <h4><a href="//prologin.org/">{% trans 'Prologin, an association since in 1991' %}</a></h4>
                 <p>
@@ -167,6 +172,7 @@
                 </p>
                 <a href="//prologin.org/" class="btn btn-primary btn-block">{% trans 'Learn more' %}</a>
             </div>
+          </div>
         </div>
       </div>
       </div>
