--- a/gccsite/gcc/templates/gcc/base.html
+++ b/gccsite/gcc/templates/gcc/base.html
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="{% url 'gcc:index' %}">
-            <img src="{% static 'gcc/img/logo.png' %}" height="40" alt="Girls Can Code!">
+            <img src="{% static 'gcc/img/logo.png' %}" alt="Girls Can Code!">
           </a>
         </div>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
